--- a/otrpo/resources/scss/styles.scss
+++ b/otrpo/resources/scss/styles.scss
@@ -28,8 +28,11 @@ $max-cards: 5;
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; // растягиваем на весь экран
   font-size: 1em;
-    font-family: 'Roboto', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 nav.navbar {
@@ -83,32 +86,46 @@ nav.navbar {
 
 
 .container {
-  margin-bottom: 55px;
+  flex-grow: 1;
 }
+
 .title{
     flex-basis: 100%;
 }
 
 .card {
+  display: flex;
+  flex-direction: column;
   max-width: 320px;
-  margin: 0;
   height: 100%;
   box-shadow: 0 4px 8px rgba(0,0,0,0.2);
   border-radius: 10px;
   transition: 0.3s;
-  padding: 2px 5px;
-
-  &:hover {
-    box-shadow: 0 8px 16px rgba(0,0,0,0.2);
-  }
-
+  padding: 10px;
   img {
     width: 100%;
-    height: 175px;
+    height: 175px; // авторазмер
     object-fit: cover;
-    border-radius: 5px 5px 0 0;
+    margin: 5px auto; // отступ сверху-снизу и центрирование
+    border-radius: 10px; // для закругленных углов
   }
 }
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  padding: 10px 15px;
+}
+
+.card-text {
+  flex-grow: 1; // растягиваем текст
+}
+
+.card-body button {
+  margin-top: auto; // кнопка всегда внизу
+}
+
 
 // Цвета для карточек вынесены наружу
 @for $i from 1 through $max-cards {
@@ -138,7 +155,6 @@ footer {
   justify-content: center; // центрируем всю группу
   align-items: center;
   gap: 45rem; // расстояние между текстом и кнопками 
-  padding: 5px 0;
   position: relative;
   width: 100%;
   @include set-all-colors($footer_color, $text_color_dark, $header_color);
@@ -146,6 +162,9 @@ footer {
   outline: none;
   box-shadow: none;
   z-index: 1;
+  flex-shrink: 0;
+  margin-bottom: 0 !important;
+  padding: 10px 20px 10px 20px !important;  // padding только внутри
 
   &::before {
     content: "";
@@ -173,8 +192,6 @@ footer .footer-button {
   outline: none;
   cursor: pointer;
 }
-
-
 
 
 
@@ -207,12 +224,11 @@ $toast-text-color: #ffffff;
   }
 }
 
+
 html, body {
+  height: 100vh; // вместо box-sizing
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  overflow-x: hidden; // безопасно применять как резерв
-}
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
+  overflow-x: hidden;
 }
